--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   },
   "homepage": "https://github.com/domadams/pre-compressed-assets#readme",
   "dependencies": {
-    "mime": "1.3.4"
+    "mime-types": "2.1.10"
   }
 }
