--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "pre-compressed-assets",
   "version": "2.0.0",
   "description": "Middleware for using pre-compressed gzip or brotli files based on regex url pattern",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src/index.js",
+    "build": "cp src/index.js dist/"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   "homepage": "https://github.com/domadams/pre-compressed-assets#readme",
   "dependencies": {
     "mime-types": "2.1.19"
+  },
+  "devDependencies": {
+    "eslint": "^5.4.0"
   }
 }
