--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "pre-compressed-assets",
   "version": "2.0.0",
   "description": "Middleware for using pre-compressed gzip or brotli files based on regex url pattern",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "lint": "eslint src/index.js",
-    "build": "cp src/index.js dist/"
+    "lint": "eslint src/index.js"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:domadams/pre-compressed-assets.git"
   },
   "keywords": [
-    "node"
+    "node",
+    "compression",
+    "brotli",
+    "gzip"
   ],
   "author": "Dom Adams",
   "license": "MIT",
