--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "2.1.1",
   "description": "Middleware for using pre-compressed gzip or brotli files based on regex url pattern",
   "main": "src/index.js",
+  "types": "index.d.ts",
   "scripts": {
-    "lint": "eslint src/index.js"
+    "lint": "eslint src/index.js",
+    "clean": "rimraf node_modules/ package-lock.json"
   },
   "repository": {
     "type": "git",
@@ -12,6 +14,7 @@
   },
   "keywords": [
     "node",
+    "express",
     "compression",
     "brotli",
     "gzip"
@@ -22,10 +25,11 @@
     "url": "https://github.com/domadams/pre-compressed-assets/issues"
   },
   "homepage": "https://github.com/domadams/pre-compressed-assets#readme",
-  "dependencies": {
-    "mime-types": "2.1.22"
-  },
   "devDependencies": {
-    "eslint": "^5.15.1"
+    "eslint": "^5.15.1",
+    "rimraf": "^2.6.3"
+  },
+  "peerDependencies": {
+    "express": "^4.0.0"
   }
 }
